--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
 		<td> <a href="paper/MICCAI_2023.pdf" target="_blank">Multi-Scale Prototypical Transformer for Whole Slide Image Classification</a><br>
 		Saisai Ding, Jun Wang, <b>Juncheng Li</b>, and Jun Shi*
 		<p><em>International Conference on Medical Image Computing and Computer-Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2023. <br>
+		<font color="red">Top medical image processing conference.</font><br>
         <a href="https://link.springer.com/chapter/10.1007/978-3-031-43987-2_58", target="_blank">[Paper]</a>
 		</td>
 	</tr>
@@ -545,7 +546,7 @@
 			<img src="./indexpics/CVPR2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 			</td>		
 			<td><a href="" target="_blank">Learning Coupled Dictionaries from Unpaired Data for Image Super-Resolution <font color="red">【New】</font></a><br>
-			Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo.
+			Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo*.
 			<p><em>Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024. <br>
 			<font color="red">Top computer vision conference.</font><br>
 			<a href="", target="_blank">[Paper]</a>
