--- a/index_zw.html
+++ b/index_zw.html
@@ -404,6 +404,7 @@
 		<td> <a href="paper/MICCAI_2023.pdf" target="_blank">Multi-Scale Prototypical Transformer for Whole Slide Image Classification<font color="red">【New】</font></a><br>
 		Saisai Ding, Jun Wang, <b>Juncheng Li</b>, and Jun Shi*
 		<p><em>International Conference on Medical Image Computing and Computer-Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2023. <br>
+		<font color="red">医学影像处理顶级会议</font><br>
         <a href="https://link.springer.com/chapter/10.1007/978-3-031-43987-2_58", target="_blank">[论文]</a>
 		</td>
 	</tr>
@@ -555,7 +556,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">【Hot】</font></a><br>
 		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">计算机视觉顶级会议。【引用：700+】</font><br>
+		<font color="red">计算机视觉顶级会议【引用：700+】</font><br>
 		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
 		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
@@ -573,9 +574,9 @@
 		<img src="./indexpics/CVPR2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="" target="_blank">Learning Coupled Dictionaries from Unpaired Data for Image Super-Resolution <font color="red">【New】</font></a><br>
-		Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo.
+		Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo*.
 		<p><em>Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024. <br>
-		<font color="red">计算机顶级会议。</font><br>
+		<font color="red">计算机顶级会议</font><br>
 		<a href="", target="_blank">[论文]</a>
 		<a href="", target="_blank">[海报]</a>
 		<a href="", target="_blank">[代码]</a>
@@ -592,7 +593,7 @@
 		<td><a href="paper/ICCV_2021.pdf" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
 		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang*, Guixu Zhang, and Tieyong Zeng.
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
-		<font color="red">计算机顶级会议。</font><br>
+		<font color="red">计算机顶级会议</font><br>
 		<a href="paper/ICCV_2021.pdf", target="_blank">[论文]</a>
 		<a href="poster/ICCV_poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/Joyies/SPDNet", target="_blank">[代码]</a>
@@ -610,7 +611,7 @@
 		<td><a href="paper/ACMMM_2021.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
 		Qinyan Dai, <b>Juncheng Li</b>, Qiaosi Yi, Faming Fang*, and Guixu Zhang.
 		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACM MM</b></i>), 2021. <br>
-		<font color="red">多媒体顶级会议。</font><br>
+		<font color="red">多媒体顶级会议</font><br>
 		<a href="paper/ACMMM_2021.pdf", target="_blank">[论文]</a>
 		<a href="poster/ACMMM_poster.pdf", target="_blank">[海报]</a>
         <a href="https://github.com/MIVRC/SSRDEFNet-PyTorch", target="_blank">[代码]</a>
@@ -627,7 +628,7 @@
 		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution</a><br>
 		Guangwei Gao#, Wenjie Li#, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
 		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
-		<font color="red">人工智能顶会.</font><br>
+		<font color="red">人工智能顶会</font><br>
 		<a href="paper/AAAI.pdf", target="_blank">[论文]</a>
 		<a href="poster/AAAI-poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/IVIPLab/FDIWN", target="_blank">[代码]</a>
