--- a/index.html
+++ b/index.html
@@ -758,6 +758,9 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
+			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2024", target="_blank">CVPR-NTIRE 2024: Stereo Image Super-Resolution Challenge</a></td>
+		</tr>
+		<tr>
 			<td> <a href="https://ericlab.org/acpr2023/workshops/", target="_blank">ACPR 2023 Workshop: Representation Learning for Computer Vision and Pattern Recognition</a></td>
 		</tr>
 		<tr>
@@ -776,7 +779,7 @@
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
 			<tr>
-				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">CVPR, New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022, 2023.</a></td>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">CVPR, New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022, 2023, 2024.</a></td>
 			</tr>
 			<tr>
 				<td> <a href="https://data.vision.ee.ethz.ch/cvl/aim22/", target="_blank">ICCV, AIM: Advances in Image Manipulation workshop and challenges, 2022.</a></td>
@@ -939,7 +942,7 @@
 		<tr>	
 			<td><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong ZENG</a></td>
 			<td><a href="https://guangweigao.github.io/", target="_blank">Guangwei Gao</a></td>
-			<td><a href="https://kfmei.page/", target="_blank">Kangfu Mei</a></td>
+			<!-- <td><a href="https://kfmei.page/", target="_blank">Kangfu Mei</a></td> -->
 			<td><a href="https://longguangwang.github.io/", target="_blank">Longguang Wang</a></td>
 			<td><a href="https://yingqianwang.github.io/", target="_blank">Yingqian Wang</a></td>
 		</tr>
@@ -1017,7 +1020,7 @@
  <!--<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>-->  
 <br>
-&copy; Juncheng Li | Last updated: 2023-12
+&copy; Juncheng Li | Last updated: 2024-2
 </center>
 </p>
 
