--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 2388] [Highest Citation: 772] </h2>
+<h2>Selected Publications [Total Citations: 2393] [Highest Citation: 773] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
@@ -852,18 +852,21 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
+			<td> European Conference on Computer Vision (ECCV)</td>
+		</tr>
+		<tr>
 			<td> International Conference on Computer Vision (ICCV)</td>
 		</tr>
 		<tr>
 			<td> Conference on Computer Vision and Pattern Recognition (CVPR)</td>
 		</tr>
-		<tr>
+		<!-- <tr>
 			<td> Advances in Image Manipulation workshop and challenges (AIM)</td>
 		</tr>
 		<tr>
 			<td> New Trends in Image Restoration and Enhancement workshop
 				and challenges on image and video processing (NTIRE)</td>
-		</tr>
+		</tr> -->
 		<tr>
 			<td> IEEE International Conference on Multimedia & Expo (ICME)</td>
 		</tr>
