--- a/index_zw.html
+++ b/index_zw.html
@@ -68,6 +68,7 @@
 <h2>新闻</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>获得中国产学研合作创新成果一等奖, 2023.</td></tr>
 		<tr><td>入选全球前2%顶尖科学家榜单, 2023.</td></tr>
 		<tr><td>1 篇论文（IEEE TMM）入选ESI高被引论文, 2023.</td></tr>
 		<tr><td>入选上海市”杨帆计划“, 2023.</td></tr>
