--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </p>
 
 
-<h2>News</h2>
+<h2>Recent News</h2>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>Received the First Prize for Innovation Achievements in Industry-Academia-Research Cooperation in China, 2023.</td></tr>
