--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
 <h2>Recent News</h2>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>Received the First Prize for Innovation Achievements in Industry-Academia-Research Cooperation in China, 2023.</td></tr>
 		<tr><td>Selected into the World's Top 2% Scientists list, 2023.</td></tr>
 		<tr><td>One paper (IEEE TMM) is selected as Highly Cited Papers in the latest issue of ESI Index, 2023.</td></tr>
 		<tr><td>Selected into “Yang Fan Plan” of Shanghai, 2023.</td></tr>
@@ -141,6 +140,7 @@
 <h2>Honors &amp; Awards</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>The First Prize for Innovation Achievements in Industry-Academia-Research Cooperation in China, 2023.</td></tr>
 		<tr><td>Research Fellowship Scheme, The Chinese University of Hong Kong, 2021.</td></tr> 
 		<tr><td>Outstanding PhD Graduates in Shanghai, Shanghai, 2021.</td></tr> 
 		<tr><td>Innovative and Intelligent Youth, East China Normal University, 2020. (0.5%)</td></tr> 	
