--- a/index_zw.html
+++ b/index_zw.html
@@ -68,7 +68,6 @@
 <h2>近期新闻</h2>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>获得中国产学研合作创新成果一等奖, 2023.</td></tr>
 		<tr><td>入选全球前2%顶尖科学家榜单, 2023.</td></tr>
 		<tr><td>1 篇论文（IEEE TMM）入选ESI高被引论文, 2023.</td></tr>
 		<tr><td>入选上海市”杨帆计划“, 2023.</td></tr>
@@ -172,6 +171,7 @@
 <h2>荣誉 &amp; 奖项</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>中国产学研合作创新成果一等奖, 2023.</td></tr>
 		<tr><td>研究奖学金资助, 香港中文大学, 2021.</td></tr> 
 		<tr><td>上海市优秀博士毕业生称号, 上海市教委, 2021.</td></tr> 
 		<tr><td>创智青年称号, 华东师范大学, 2020. (0.5%)</td></tr> 	
