--- a/index_zw.html
+++ b/index_zw.html
@@ -86,7 +86,7 @@
 		上海市自然科学基金-面上项目, 2023, 主持
 	</li>
 	<li>
-		上海市青年科技英才杨帆计划, 2023, 主持
+		上海市青年科技英才扬帆计划, 2023, 主持
 	</li>
 	<li>
 		上海市高校青年教师资助重点项目, 2023, 主持
