--- a/index_zw.html
+++ b/index_zw.html
@@ -70,7 +70,7 @@
 	<tbody>
 		<tr><td>入选全球前2%顶尖科学家榜单, 2023.</td></tr>
 		<tr><td>1 篇论文（IEEE TMM）入选ESI高被引论文, 2023.</td></tr>
-		<tr><td>入选上海市”杨帆计划“, 2023.</td></tr>
+		<tr><td>入选上海市青年科技英才”杨帆计划“, 2023.</td></tr>
 	</tbody>
 </table>
 
@@ -219,7 +219,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 2507] [最高引用: 802] </h2>
+<h2>精选出版物 [总引用: 2510] [最高引用: 802] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <!-- <h4>精选预印本</h4>
