--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 2527] [Highest Citation: 804] </h2>
+<h2>Selected Publications [Total Citations: 2532] [Highest Citation: 804] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
@@ -550,7 +550,7 @@
 			Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo*.
 			<p><em>Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024. <br>
 			<font color="red">Top computer vision conference.</font><br>
-			<a href="", target="_blank">[Paper]</a>
+			<a href="paper/CVPR.pdf", target="_blank">[Paper]</a>
 			<a href="", target="_blank">[Poster]</a>
 			<a href="", target="_blank">[Code]</a>
 			</td>
