--- a/index_zw.html
+++ b/index_zw.html
@@ -219,7 +219,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 2527] [最高引用: 804] </h2>
+<h2>精选出版物 [总引用: 2532] [最高引用: 804] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <!-- <h4>精选预印本</h4>
@@ -578,7 +578,7 @@
 		Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo*.
 		<p><em>Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024. <br>
 		<font color="red">计算机顶级会议</font><br>
-		<a href="", target="_blank">[论文]</a>
+		<a href="paper/CVPR.pdf", target="_blank">[论文]</a>
 		<a href="", target="_blank">[海报]</a>
 		<a href="", target="_blank">[代码]</a>
 		</td>
