--- a/index_zw.html
+++ b/index_zw.html
@@ -62,7 +62,7 @@
 
 <h2>简介</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	我于2021年在华东师范大学计算机科学与技术学院获得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b> 教授共同指导。2021-2022年，我在香港中文大学担任博后研究员，博后主管为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如：图像分割、目标检测）和图像处理（如：图像超分辨率、恶劣天气下的图像复原、医学影像处理）中的应用。我在知名的期刊和会议上已发表论文40余篇，包括 TIP、TNNLS、TMM、TCSVT、TMI、JBHI、CVPR、ICCV、ECCV、AAAI、IJCAI、ACMMM、MICCAI。我曾获得2023年中国产学研合作创新成果一等奖、2021年香港中文大学研究奖学金计划、2021年上海优秀博士毕业生、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。同时，我还担任包括CVPR、ICCV、ECCV、AAAI、TPAMI、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR和KBS在内的30多个国际知名期刊/会议审稿人。
+	我于2021年在华东师范大学计算机科学与技术学院获得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b> 教授共同指导。2021-2022年，我在香港中文大学担任博后研究员，博后主管为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如：图像分割、目标检测）和图像处理（如：图像超分辨率、恶劣天气下的图像复原、医学影像处理）中的应用。我在知名的期刊和会议上已发表论文40余篇，包括ACM CS、TIP、TNNLS、TMM、TCSVT、TMI、JBHI、CVPR、ICCV、ECCV、AAAI、IJCAI、ACMMM、MICCAI。我曾获得2023年中国产学研合作创新成果一等奖、2021年香港中文大学研究奖学金计划、2021年上海优秀博士毕业生、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。同时，我还担任包括CVPR、ICCV、ECCV、AAAI、TPAMI、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR和KBS在内的30多个国际知名期刊/会议审稿人。
 </p>
 
 <h2>近期新闻</h2>
@@ -120,6 +120,7 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 ACM Computing Surveys, 2024.</td></tr> 
 		<tr><td>一篇论文已被 TMI, 2024.</td></tr> 
 		<tr><td>一篇论文已被 CVPR, 2024.</td></tr> 
 		<tr><td>一篇论文已被 TMI, 2024.</td></tr> 
