--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by IEEE JBHI, 2024.</td></tr>
 		<tr><td>One paper is accepted by ACM Computing Surveys, 2024.</td></tr>
 		<tr><td>One paper is accepted by TMI, 2024.</td></tr>
 		<tr><td>One paper is accepted by CVPR, 2024.</td></tr>
@@ -189,7 +190,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 2549] [Highest Citation: 806] </h2>
+<h2>Selected Publications [Total Citations: 2558] [Highest Citation: 808] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
