--- a/index_zw.html
+++ b/index_zw.html
@@ -120,6 +120,7 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 IEEE JBHI, 2024.</td></tr> 
 		<tr><td>一篇论文已被 ACM Computing Surveys, 2024.</td></tr> 
 		<tr><td>一篇论文已被 TMI, 2024.</td></tr> 
 		<tr><td>一篇论文已被 CVPR, 2024.</td></tr> 
@@ -221,7 +222,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 2549] [最高引用: 806] </h2>
+<h2>精选出版物 [总引用: 2558] [最高引用: 808] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <!-- <h4>精选预印本</h4>
