--- a/index.html
+++ b/index.html
@@ -209,21 +209,6 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr> -->
-
-	<!-- <tr>	
-		<td width="206">
-		<img src="./indexpics/SMGARN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2207.04754.pdf" target="_blank">Snow Mask Guided Adaptive Residual Network for Image Snow Removal</a><br>
-		Bodong Cheng, <b>Juncheng Li*</b>, Ying Chen*, Shuyi Zhang, and Tieyong Zeng
-		<p><em>arXiv 2207.04754</em>, 2022.<br>
-		<a href="paper/SMGARN.pdf", target="_blank">[Paper]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr> -->
-
 	<!-- <tr>	
 		<td width="206">
 		<img src="./indexpics/PAMI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -252,31 +237,73 @@
     <tr></tr>
 	<tr></tr> -->
 
-	<!-- <tr>	
+<h3>Selected Survey</h4>
+<table id="tbPublications" width="100%">
+	<tbody> 
+    <tr>	
 		<td width="206">
-		<img src="./indexpics/SISR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/CSUR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2109.14335.pdf" target="_blank">From Beginner to Master: A Survey for Deep Learning-based Single-Image Super-Resolution</a><br>
-		<b>Juncheng Li#</b>, Zehua Pei#, and Tieyong Zeng*.
-		<p><em>arXiv 2109.14335</em>, 2021.<br>
+		<td> <a href="https://arxiv.org/pdf/2109.14335.pdf" target="_blank">A Systematic Survey of Deep Learning-based Single-Image Super-Resolution</a><br>
+		<b>Juncheng Li</b>, Zehua Pei, Wenjie Li, Guangwei Gao, Longguang Wang, Yingqian Wang, Tieyong Zeng
+		<p><em>ACM Computing Surveys</em> (<i><b>CUSR</b></i>), 2024.<br>
 		<iframe src="https://ghbtns.com/github-btn.html?user=CV-JunchengLi&repo=SISR-Survey
 		&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe><br>
-		<a href="paper/SISR_2021.pdf", target="_blank">[Paper]</a>
+		<a href="paper/CSUR.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/CV-JunchengLi/SISR-Survey", target="_blank">[Homepage]</a>
 		</td>
 	</tr>
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
- </tbody></table> -->
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/JIG.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/JIG_2023.pdf" target="_blank">Applications and Challenges of Deep Learning in Dental Imaging <font color="red">【New】</font></a><br>
+		Yang Zhao, <b>Juncheng Li*</b>, Bodong Cheng, Najun Niu, Longguang Wang, Guangwei Gao, Jun Shi
+		<p><em>Journal of Image and Graphics</em> (<i><b>Chinese Journal</b></i>), 2023. <br>
+        <a href="http://www.cjig.cn/jig/ch/reader/download_new_edit_content.aspx?edit_id=20230904140109001&file_no=202302090000001&journal_id=jig", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+ </tbody></table>
 
 
 <h3>Medical Image Processing</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/JBHI2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">Involution Transformer based U-Net for Landmark Detection in Ultrasound Images for Diagnosis of Infantile DDH<font color="red">【New】</font></a><br>
+		Tianxiang Huang, Jing Shi*, <b>Juncheng Li</b>, Jun Wang, Jun Du, Jun Shi*
+		<p><em>IEEE Journal of Biomedical and Health Informatics</em> (<i><b>JBHI</b></i>), 2024. <br>
+        <a href="", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/TMI2024-2.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">Cost-Sensitive Weighted Contrastive Learning Based on Graph Convolutional Networks for Imbalanced Alzheimer’s Disease Staging<font color="red">【New】</font></a><br>
+		Yan Hu, Jun Wang*, Hao Zhu, <b>Juncheng Li</b>, Jun Shi
+		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2024. <br>
+        <a href="", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
     <tr>	
 		<td width="206">
-		<img src="./indexpics/TSDDNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/TMI2024-1.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank">Weakly Supervised Lesion Detection and Diagnosis for Breast Cancers with Partially Annotated Ultrasound Images<font color="red">【New】</font></a><br>
 		Jian Wang, Liang Qiao, Shichong Zhou, Jin Zhou, Jun Wang, <b>Juncheng Li</b>, Shihui Ying, Cai Chang, Jun Shi*
@@ -305,24 +332,11 @@
 		<td width="206">
 		<img src="./indexpics/EAMRI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/CICP_2023.pdf" target="_blank">Fast MRI Reconstruction via Edge Attention <font color="red">【New】</font></a><br>
+		<td> <a href="paper/CICP_2023.pdf" target="_blank">Fast MRI Reconstruction via Edge Attention </a><br>
 		Hanhui Yang, <b>Juncheng Li*</b>, Lok Ming Lui, Shihui Ying, Jun Shi, and Tieyong Zeng*
 		<p><em>Communications in Computational Physics</em> (<i><b>CICP</b></i>), 2023. <br>
         <a href="https://arxiv.org/pdf/2304.11400.pdf", target="_blank">[Paper]</a>
 		<a href="", target="_blank">[Code]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/JIG.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="paper/JIG_2023.pdf" target="_blank">Applications and Challenges of Deep Learning in Dental Imaging <font color="red">【New】</font></a><br>
-		Yang Zhao, <b>Juncheng Li*</b>, Bodong Cheng, Najun Niu, Longguang Wang, Guangwei Gao, Jun Shi
-		<p><em>Journal of Image and Graphics</em> (<i><b>Chinese Journal</b></i>), 2023. <br>
-        <a href="http://www.cjig.cn/jig/ch/reader/download_new_edit_content.aspx?edit_id=20230904140109001&file_no=202302090000001&journal_id=jig", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -354,7 +368,7 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-	<tr>	
+	<!-- <tr>	
 		<td width="206">
 		<img src="./indexpics/PR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -367,7 +381,7 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
-	<tr></tr>
+	<tr></tr> -->
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/MICCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
