--- a/index_zw.html
+++ b/index_zw.html
@@ -225,93 +225,75 @@
 <h2>精选出版物 [总引用: 2558] [最高引用: 808] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
-<!-- <h4>精选预印本</h4>
-<table id="tbPublications" width="100%">
-	<tbody> -->
-	<!-- <tr>	
-		<td width="206">
-		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2304.06274.pdf" target="_blank">EWT: Efficient Wavelet-Transformer for Single Image Denoising</a><br>
-		<b>Juncheng Li</b>, Bodong Cheng, Ying Chen, Guangwei Gao, and Tieyong Zeng
-		<p><em>arXiv 2304.06274</em>, 2023.<br>
-		<a href="paper/EWT_2023.pdf", target="_blank">[论文]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr> -->
-
-	<!-- <tr>	
-		<td width="206">
-		<img src="./indexpics/SMGARN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2207.04754.pdf" target="_blank">Snow Mask Guided Adaptive Residual Network for Image Snow Removal</a><br>
-		Bodong Cheng, <b>Juncheng Li*</b>, Ying Chen*, Shuyi Zhang, and Tieyong Zeng
-		<p><em>arXiv 2207.04754</em>, 2022.<br>
-		<a href="paper/SMGARN.pdf", target="_blank">[论文]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr> -->
-
-	<!-- <tr>	
-		<td width="206">
-		<img src="./indexpics/PAMI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2212.14181.pdf" target="_blank">Efficient Image Super-Resolution with Feature Interaction Weighted Hybrid Network</a><br>
-		Wenjie Li#, <b>Juncheng Li#</b>, Guangwei Gao*, Weihong Deng, Jian Yang, Guo-Jun Qi, and Chia-Wen Lin
-		<p><em>arXiv 2212.14181</em>, 2023.<br>
-		<a href="paper/FIWHN_2023.pdf", target="_blank">[论文]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr> -->
-
-	<!-- <tr>	
-		<td width="206">
-		<img src="./indexpics/CFIN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2207.02796.pdf" target="_blank">Cross-receptive Focused Inference Network for Lightweight Image Super-Resolution</a><br>
-		Wenjie Li, <b>Juncheng Li</b>, Guangwei Gao*, Jiantao Zhou, Jian Yang, and Guo-Jun Qi.
-		<p><em>arXiv 2207.02796</em>, 2022.<br>
-		<a href="paper/CFIN.pdf", target="_blank">[论文]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr> -->
-
-	<!-- <tr>	
-		<td width="206">
-		<img src="./indexpics/SISR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2109.14335.pdf" target="_blank">From Beginner to Master: A Survey for Deep Learning-based Single-Image Super-Resolution</a><br>
-		<b>Juncheng Li</b>, Zehua Pei, and Tieyong Zeng*.
-		<p><em>arXiv 2109.14335</em>, 2021.<br>
-		<iframe src="https://ghbtns.com/github-btn.html?user=CV-JunchengLi&repo=SISR-Survey
-		&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe><br>
-		<a href="paper/SISR_2021.pdf", target="_blank">[论文]</a>
-		<a href="https://github.com/CV-JunchengLi/SISR-Survey", target="_blank">[主页]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-</tbody></table> -->
-
+<h3>精选综述</h4>
+	<table id="tbPublications" width="100%">
+		<tbody> 
+		<tr>	
+			<td width="206">
+			<img src="./indexpics/CSUR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td> <a href="https://arxiv.org/pdf/2109.14335.pdf" target="_blank">A Systematic Survey of Deep Learning-based Single-Image Super-Resolution <font color="red">【最新】</font></a><br>
+			<b>Juncheng Li</b>, Zehua Pei, Wenjie Li, Guangwei Gao, Longguang Wang, Yingqian Wang, Tieyong Zeng
+			<p><em>ACM Computing Surveys</em> (<i><b>CUSR</b></i>), 2024.<br>
+			<iframe src="https://ghbtns.com/github-btn.html?user=CV-JunchengLi&repo=SISR-Survey
+			&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe><br>
+			<a href="paper/CSUR.pdf", target="_blank">[论文]</a>
+			<a href="https://github.com/CV-JunchengLi/SISR-Survey", target="_blank">[项目主页]</a>
+			</td>
+		</tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr>	
+			<td width="206">
+			<img src="./indexpics/JIG.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td> <a href="paper/JIG_2023.pdf" target="_blank">深度学习在口腔医学影像中的应用与挑战<font color="red">【最新】</font></a><br>
+			Yang Zhao, <b>Juncheng Li*</b>, Bodong Cheng, Najun Niu, Longguang Wang, Guangwei Gao, Jun Shi
+			<p><em>中国图象图形学报</em>, 2023. <br>
+			<a href="http://www.cjig.cn/jig/ch/reader/download_new_edit_content.aspx?edit_id=20230904140109001&file_no=202302090000001&journal_id=jig", target="_blank">[论文]</a>
+			</td>
+		</tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+	 </tbody></table>
 
 
 <h3>医学影像处理论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
+		<tr>	
+		<td width="206">
+		<img src="./indexpics/JBHI2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">Involution Transformer based U-Net for Landmark Detection in Ultrasound Images for Diagnosis of Infantile DDH<font color="red">【最新】</font></a><br>
+		Tianxiang Huang, Jing Shi*, <b>Juncheng Li</b>, Jun Wang, Jun Du, Jun Shi*
+		<p><em>IEEE Journal of Biomedical and Health Informatics</em> (<i><b>JBHI</b></i>), 2024. <br>
+        <a href="", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
 	<tr>	
 		<td width="206">
-		<img src="./indexpics/TSDDNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/TMI2024-2.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">Weakly Supervised Lesion Detection and Diagnosis for Breast Cancers with Partially Annotated Ultrasound Images<font color="red">【New】</font></a><br>
+		<td> <a href="" target="_blank">Cost-Sensitive Weighted Contrastive Learning Based on Graph Convolutional Networks for Imbalanced Alzheimer’s Disease Staging<font color="red">【最新】</font></a><br>
+		Yan Hu, Jun Wang*, Hao Zhu, <b>Juncheng Li</b>, Jun Shi
+		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2024. <br>
+        <a href="", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/TMI2024-1.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">Weakly Supervised Lesion Detection and Diagnosis for Breast Cancers with Partially Annotated Ultrasound Images<font color="red">【最新】</font></a><br>
 		Jian Wang, Liang Qiao, Shichong Zhou, Jin Zhou, Jun Wang, <b>Juncheng Li</b>, Shihui Ying, Cai Chang, Jun Shi*
 		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2024. <br>
         <a href="", target="_blank">[论文]</a>
@@ -324,7 +306,7 @@
 		<td width="206">
 		<img src="./indexpics/Tooth.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/Fast-TGCN.pdf" target="_blank">A Fine-Grained Orthodontics Segmentation Model for 3D Intraoral Scan Data <font color="red">【New】</font></a><br>
+		<td> <a href="paper/Fast-TGCN.pdf" target="_blank">A Fine-Grained Orthodontics Segmentation Model for 3D Intraoral Scan Data <font color="red">【最新】</font></a><br>
 		<b>Juncheng Li</b>, Bodong Cheng, Najun Niu, Guangwei Gao, Shihui Ying, Jun Shi, Tieyong Zeng
 		<p><em>Computers in Biology and Medicine</em> (<i><b>CIBM</b></i>), 2023. <br>
         <a href="https://www.sciencedirect.com/science/article/pii/S0010482523012866", target="_blank">[论文]</a>
@@ -338,7 +320,7 @@
 		<td width="206">
 		<img src="./indexpics/EAMRI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/CICP_2023.pdf" target="_blank">Fast MRI Reconstruction via Edge Attention <font color="red">【New】</font></a><br>
+		<td> <a href="paper/CICP_2023.pdf" target="_blank">Fast MRI Reconstruction via Edge Attention </a><br>
 		Hanhui Yang, <b>Juncheng Li*</b>, Lok Ming Lui, Shihui Ying, Jun Shi, and Tieyong Zeng*
 		<p><em>Communications in Computational Physics</em> (<i><b>CICP</b></i>), 2023. <br>
         <a href="https://arxiv.org/pdf/2304.11400.pdf", target="_blank">[论文]</a>
@@ -350,22 +332,9 @@
 	<tr></tr>
 	<tr>	
 		<td width="206">
-		<img src="./indexpics/JIG.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="paper/JIG_2023.pdf" target="_blank">深度学习在口腔医学影像中的应用与挑战<font color="red">【New】</font></a><br>
-		Yang Zhao, <b>Juncheng Li*</b>, Bodong Cheng, Najun Niu, Longguang Wang, Guangwei Gao, Jun Shi
-		<p><em>中国图象图形学报</em>, 2023. <br>
-        <a href="http://www.cjig.cn/jig/ch/reader/download_new_edit_content.aspx?edit_id=20230904140109001&file_no=202302090000001&journal_id=jig", target="_blank">[论文]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-	<tr>	
-		<td width="206">
 		<img src="./indexpics/TMI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/TMI_2023.pdf" target="_blank">Pseudo-Data based Self-Supervised Federated Learning for Classification of Histopathological Images<font color="red">【New】</font></a><br>
+		<td> <a href="paper/TMI_2023.pdf" target="_blank">Pseudo-Data based Self-Supervised Federated Learning for Classification of Histopathological Images</a><br>
 		Yuanming Zhang, Zheng Li, Xiangmin Han, Saisai Ding, <b>Juncheng Li</b>, Jun Wang, Shihui Ying, Jun Shi*
 		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2023. <br>
         <a href="https://arxiv.org/pdf/2305.15773.pdf", target="_blank">[论文]</a>
@@ -378,13 +347,13 @@
 		<td width="206">
 		<img src="./indexpics/JBHI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/JBHI_2023.pdf" target="_blank">Multi-scale Efficient Graph-Transformer for Whole Slide Image Classification<font color="red">【New】</font></a><br>
+		<td> <a href="paper/JBHI_2023.pdf" target="_blank">Multi-scale Efficient Graph-Transformer for Whole Slide Image Classification</a><br>
 		Saisai Ding, <b>Juncheng Li</b>, Jun Wang, Shihui Ying, Jun Shi*
 		<p><em>IEEE Journal of Biomedical and Health Informatics</em> (<i><b>JBHI</b></i>), 2023. <br>
         <a href="https://arxiv.org/pdf/2305.15773.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
-	<tr>	
+	<!-- <tr>	
 		<td width="206">
 		<img src="./indexpics/PR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -400,7 +369,7 @@
 	<tr></tr>
 	<tr></tr>
     <tr></tr>
-	<tr></tr>
+	<tr></tr> -->
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/MICCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
