--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 		<td width="206">
 		<img src="./indexpics/CSUR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2109.14335.pdf" target="_blank">A Systematic Survey of Deep Learning-based Single-Image Super-Resolution</a><br>
+		<td> <a href="https://arxiv.org/pdf/2109.14335.pdf" target="_blank">A Systematic Survey of Deep Learning-based Single-Image Super-Resolution <font color="red">【New】</font></a><br>
 		<b>Juncheng Li</b>, Zehua Pei, Wenjie Li, Guangwei Gao, Longguang Wang, Yingqian Wang, Tieyong Zeng
 		<p><em>ACM Computing Surveys</em> (<i><b>CUSR</b></i>), 2024.<br>
 		<iframe src="https://ghbtns.com/github-btn.html?user=CV-JunchengLi&repo=SISR-Survey
