--- a/index_zw.html
+++ b/index_zw.html
@@ -232,12 +232,12 @@
 			<td width="206">
 			<img src="./indexpics/CSUR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 			</td>		
-			<td> <a href="https://arxiv.org/pdf/2109.14335.pdf" target="_blank">A Systematic Survey of Deep Learning-based Single-Image Super-Resolution <font color="red">【最新】</font></a><br>
+			<td> <a href="https://dl.acm.org/doi/abs/10.1145/3659100" target="_blank">A Systematic Survey of Deep Learning-based Single-Image Super-Resolution <font color="red">【最新】</font></a><br>
 			<b>Juncheng Li</b>, Zehua Pei, Wenjie Li, Guangwei Gao, Longguang Wang, Yingqian Wang, Tieyong Zeng
 			<p><em>ACM Computing Surveys</em> (<i><b>CUSR</b></i>), 2024.<br>
 			<iframe src="https://ghbtns.com/github-btn.html?user=CV-JunchengLi&repo=SISR-Survey
 			&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe><br>
-			<a href="paper/CSUR.pdf", target="_blank">[论文]</a>
+			<a href="https://dl.acm.org/doi/abs/10.1145/3659100", target="_blank">[论文]</a>
 			<a href="https://github.com/CV-JunchengLi/SISR-Survey", target="_blank">[项目主页]</a>
 			</td>
 		</tr>
