--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
 		<b>Juncheng Li</b>, Bodong Cheng, Najun Niu, Guangwei Gao, Shihui Ying, Jun Shi, Tieyong Zeng
 		<p><em>Computers in Biology and Medicine</em> (<i><b>CIBM</b></i>), 2023. <br>
         <a href="https://www.sciencedirect.com/science/article/pii/S0010482523012866", target="_blank">[Paper]</a>
+		<a href="https://reurl.cc/0vjLXY", target="_blank">[Dataset]</a>
 		<a href="", target="_blank">[Code]</a>
 		</td>
 	</tr>
