--- a/index_zw.html
+++ b/index_zw.html
@@ -309,7 +309,8 @@
 		<td> <a href="paper/Fast-TGCN.pdf" target="_blank">A Fine-Grained Orthodontics Segmentation Model for 3D Intraoral Scan Data <font color="red">【最新】</font></a><br>
 		<b>Juncheng Li</b>, Bodong Cheng, Najun Niu, Guangwei Gao, Shihui Ying, Jun Shi, Tieyong Zeng
 		<p><em>Computers in Biology and Medicine</em> (<i><b>CIBM</b></i>), 2023. <br>
-        <a href="https://www.sciencedirect.com/science/article/pii/S0010482523012866", target="_blank">[论文]</a>
+		<a href="https://www.sciencedirect.com/science/article/pii/S0010482523012866", target="_blank">[论文]</a>
+		<a href="https://reurl.cc/0vjLXY", target="_blank">[数据集]</a>
 		<a href="", target="_blank">[代码]</a>
 		</td>
 	</tr>
