--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by Neural Networks, 2024.</td></tr>
 		<tr><td>One paper is accepted by IEEE JBHI, 2024.</td></tr>
 		<tr><td>One paper is accepted by ACM Computing Surveys, 2024.</td></tr>
 		<tr><td>One paper is accepted by TMI, 2024.</td></tr>
