--- a/index_zw.html
+++ b/index_zw.html
@@ -120,6 +120,7 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 Neural Networks, 2024.</td></tr> 
 		<tr><td>一篇论文已被 IEEE JBHI, 2024.</td></tr> 
 		<tr><td>一篇论文已被 ACM Computing Surveys, 2024.</td></tr> 
 		<tr><td>一篇论文已被 TMI, 2024.</td></tr> 
